# tenuki

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/roadmap/: roadmap.md
include/go/: Board.hpp  Rules.hpp  Zobrist.hpp
include/gtp/: GTP.hpp
include/search/: Search.hpp
include/sgf/: SGF.hpp
src/: main.cpp
src/go/: Board.cpp  Rules.cpp  Zobrist.cpp
src/gtp/: GTP.cpp
src/search/: Search.cpp
src/sgf/: SGF.cpp
tests/: BoardTests.cpp  GTPFuzz_test.py  GTPIntegration_test.py  ModelQualityTests.cpp  SGFFuzzTests.cpp  SGFTests.cpp  SearchStressTests.cpp  SearchTests.cpp  TestMain.cpp  TestUtils.hpp
tools/: SearchBenchmark.cpp
